--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 
             <!-- Headline -->
             <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
+            <span id="number"></span> pessoas estão assistindo a esse vídeo agora!
+
+<script>
+function add(){number+=Math.floor((Math.random()*6)+1);document.getElementById("number").innerHTML=number;setTimeout("add()",10000);}        
+function generate(){number=Math.floor(Math.random()*1143)+3578;document.getElementById("number").innerHTML=number;add();}
+generate();</script>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_62427aa534cf0a0009811d97">var s=document.createElement("script");s.src="https://cdn.converteai.net/fd802aef-7557-4a85-91a3-ade3d9b9c68e/players/62427aa534cf0a0009811d97/player.js",s.async=!0,document.head.appendChild(s);</script>
