--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ generate();</script>
           <img src="https://i.imgur.com/qrr6krW.jpg">
         </noscript>
         <img class=" lazyloaded" src="https://i.imgur.com/qrr6krW.jpg" data-src="https://i.imgur.com/qrr6krW.jpg">Lívia Batista </span>
-      <p>Meu namorado viciou na minha bunda hahaaha</p> <span class="infos">Responder · Curtir · Seguir · 4h </span> </div>
+      <p>Meu namorado viciou na meu novo corpo hahaaha</p> <span class="infos">Responder · Curtir · Seguir · 4h </span> </div>
       <!-- FIM DO COMENTARIO -->    
     
       <!-- INICIO DO COMENTARIO -->
